--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,5 @@ spring.flyway.locations=classpath:db/migration
 # ACTUATOR
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
